--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,8 +1,6 @@
 plugins {
     id 'com.android.application'
     id 'kotlin-android'
-    id 'kotlin-android-extensions'
-    id 'com.google.gms.google-services'
 }
 
 android {
@@ -10,7 +8,7 @@ android {
     buildToolsVersion "30.0.3"
 
     defaultConfig {
-        applicationId "br.iesb.mobile.meuapp"
+        applicationId "br.iesb.mobile.mercado_solto"
         minSdkVersion 23
         targetSdkVersion 30
         versionCode 1
@@ -35,10 +33,6 @@ android {
 }
 
 dependencies {
-
-    implementation platform('com.google.firebase:firebase-bom:26.6.0')
-
-    implementation 'com.google.firebase:firebase-auth-ktx'
 
     implementation "org.jetbrains.kotlin:kotlin-stdlib:$kotlin_version"
     implementation 'androidx.core:core-ktx:1.3.2'
