--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    package="br.iesb.mobile.mercado_solto">
+    package="br.iesb.mobile.mercado_solto" >
 
     <application
         android:allowBackup="true"
@@ -8,16 +8,20 @@
         android:label="@string/app_name"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
-        android:theme="@style/Theme.MercadoSolto">
-        <activity android:name=".Home"></activity>
-        <activity android:name=".ForgotActivity" />
-        <activity android:name=".SignUpActivity" />
-        <activity android:name=".MainActivity">
+        android:theme="@style/Theme.MercadoSolto" >
+        <activity
+            android:name=".SplashscreenActivity"
+            android:theme="@style/Theme.AppCompat.Light.NoActionBar" >
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
+        </activity>
+        <activity android:name=".Home" />
+        <activity android:name=".ForgotActivity" />
+        <activity android:name=".SignUpActivity" />
+        <activity android:name=".MainActivity" >
         </activity>
     </application>
 
