--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,28 +1,28 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    package="br.iesb.mobile.mercado_solto" >
+    package="br.iesb.mobile.mercado_solto">
 
     <application
         android:allowBackup="true"
-        android:icon="@mipmap/ic_launcher"
+        android:icon="@mipmap/mercado_solto"
         android:label="@string/app_name"
-        android:roundIcon="@mipmap/ic_launcher_round"
+        android:roundIcon="@mipmap/mercado_solto"
         android:supportsRtl="true"
-        android:theme="@style/Theme.MercadoSolto" >
+        android:theme="@style/Theme.MercadoSolto">
+        <activity android:name=".view.activities.OnboardingActivity" />
         <activity
-            android:name=".SplashscreenActivity"
-            android:theme="@style/Theme.AppCompat.Light.NoActionBar" >
+            android:name=".view.activities.SplashscreenActivity"
+            android:theme="@style/Theme.AppCompat.Light.NoActionBar">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <activity android:name=".Home" />
-        <activity android:name=".ForgotActivity" />
-        <activity android:name=".SignUpActivity" />
-        <activity android:name=".MainActivity" >
-        </activity>
+        <activity android:name=".view.activities.Home" />
+        <activity android:name=".view.activities.ForgotActivity" />
+        <activity android:name=".view.activities.SignUpActivity" />
+        <activity android:name=".view.activities.MainActivity" />
     </application>
 
 </manifest>
